# VOK

./: .env  .gitignore  README.md  pyproject.toml  run.py  vok.spec  vok_settings.json
.github/: dependabot.yml
.github/workflows/: README-CICD.md  build-Linux.yml  build-Windows.yml  build-macOS-Apple.yml  build-macOS-Intel.yml  release.yml
app/: main.py
app/common/: __init__.py  enhance_helpers.py  exit_app.py  i18n.py  paths.py  resource.py  shell.py  signal_bus.py  state.py  utils.py
app/common/concurrent/: __init__.py  download_worker.py  scraper_workers.py
app/common/database/: __init__.py
app/common/speed_badge/: linux.py  mac.py  win32.py
app/config/: __init__.py  store.py
app/core/: __init__.py  clipboard_service.py  download.py  enhance.py  extract_host.py  manager.py  scraper.py  task_queue.py  updater.py
app/core/enhance/: filters.py  runner.py
app/ui/: main_window.py  theme.py
app/ui/components/: __init__.py  batch_enhance_table.py  card_header.py  dashboard_feature_card.py  dashboard_feature_grid.py  dashboard_instructions_card.py  download_enhance_feature.py  download_table_card.py  download_task_model.py  home_banner.py  status_table.py  studio_banner.py  system_tray_icon.py  task_command_bar.py
app/ui/dialogs/: __init__.py  add_link_dialog.py  bulk_url_dialog.py  clear_tasks_dialog.py  clipboard_settings_dialog.py  download_settings_dialog.py  enhance_setting_dialog.py  logs_dialog.py  (+2 more)
config/: default_config.yaml
resources/: .gitkeep
resources/icons/: README.md
resources/installer/: license.rtf  script_inno.iss  welcome.rtf  welcome_win.txt
resources/instructions/: .gitkeep
resources/translations/: vok_ja_JP.qm  vok_ja_JP.ts  vok_km_KH.qm  vok_km_KH.ts  vok_ko_KR.qm  vok_ko_KR.ts  vok_ru_RU.qm  vok_ru_RU.ts  vok_th_TH.qm  vok_zh_CN.qm  vok_zh_CN.ts
scripts/: README.md  build.bat  build_mac.sh  build_mac_installer.sh  build_win.bat  build_win_installer.bat  compile_translations.py  format.sh  lint.sh  run.bat  run.sh  update-deps.bat  update-deps.sh
tests/: test_cleanup.py
(+22 files in other folders)
